tests/lean/301.lean
def ˆ(x:=fun 0=>0)n:=ÿ €
